# multievolvent-go

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experimantal_data/: draw_pics.sh  gklsH2d_same_r_opt_point.sh  gklsS2d_accuracy.sh  gklsS2d_opt_point.sh
experimantal_data/f_gr/accuracy/: grish_n_2_rotated_l_2_r_2.300000_eps_0.001000_lm_0_res_0.000000_stop_accuracy.csv  grish_n_2_rotated_l_3_r_2.100000_eps_0.001000_lm_0_res_0.000000_stop_accuracy.csv
experimantal_data/f_gr/opt_point/: grish_n_2_shifted_l_4_r_2.000000_eps_0.010000_lm_0_res_0.000000_stop_optPoint.csv
experimantal_data/gklsH2d/opt_point/: gklsH_n_2_rotated_l_2_r_5.500000_eps_0.010000_lm_0_res_0.000000_stop_optPoint.csv  gklsH_n_2_shifted_l_3_r_5.700000_eps_0.010000_lm_0_res_0.050000_stop_optPoint.csv
experimantal_data/gklsS2d/opt_point/: gklsS_n_2_shifted_l_3_r_3.700000_eps_0.010000_lm_0_res_0.000000_stop_optPoint.csv
experimantal_data/report/: report.tex
experimental_data/: draw_pics.sh  gklsH2d_accuracy.sh  gklsH2d_opt_point.sh  gklsH2d_same_r_accuracy.sh  gklsH2d_same_r_opt_point.sh  gklsS2d_accuracy.sh  gklsS2d_opt_point.sh  gklsS2d_same_r_accuracy.sh  gklsS2d_same_r_opt_point.sh  gklsS3d_opt_point.sh  gklsS3d_same_r_accuracy.sh  gklsS3d_same_r_opt_point.sh  gklsS4d_opt_point.sh  grish_accuracy.sh  grish_opt_point.sh  grish_same_r_accuracy.sh  grish_same_r_opt_point.sh
experimental_data/report/: report.tex
operation_characteristics/: draw_pics.sh  gklsH2d_accuracy.sh  gklsH2d_opt_point.sh  gklsH_n_2_rotated_l_1_r_6.600000_eps_0.010000_lm_0_stop_optPoint.csv  gklsH_n_2_rotated_l_2_r_5.500000_eps_0.010000_lm_0_stop_optPoint.csv  gklsH_n_2_rotated_l_3_r_4.600000_eps_0.010000_lm_0_stop_optPoint.csv  gklsH_n_2_shifted_l_1_r_6.400000_eps_0.010000_lm_0_stop_optPoint.csv  gklsH_n_2_shifted_l_2_r_6.100000_eps_0.010000_lm_0_stop_optPoint.csv  gklsH_n_2_shifted_l_3_r_5.700000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS2d_same_r_opt_point.sh  gklsS3d_same_r_accuracy.sh  gklsS3d_same_r_opt_point.sh  gklsS_n_2_rotated_l_1_r_4.600000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_rotated_l_1_r_4.600000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_rotated_l_1_r_5.000000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_rotated_l_2_r_3.700000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_rotated_l_2_r_3.700000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_rotated_l_2_r_5.000000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_rotated_l_3_r_3.400000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_rotated_l_3_r_3.600000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_shifted_l_1_r_4.400000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_shifted_l_1_r_4.800000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_shifted_l_1_r_5.000000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_shifted_l_2_r_4.700000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_shifted_l_2_r_4.900000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_shifted_l_3_r_3.700000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_2_shifted_l_3_r_4.100000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_shifted_l_4_r_3.500000_eps_0.005000_lm_0_stop_accuracy.csv  gklsS_n_2_shifted_l_4_r_3.500000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_3_rotated_l_3_r_3.300000_eps_0.010000_lm_0_stop_optPoint.csv  gklsS_n_3_shifted_l_1_r_4.300000_eps_0.010000_lm_0_stop_optPoint.csv  grish_n_2_rotated_l_1_r_3.000000_eps_0.001000_lm_0_stop_accuracy.csv  grish_n_2_rotated_l_1_r_3.000000_eps_0.010000_lm_0_stop_optPoint.csv  grish_n_2_rotated_l_2_r_2.200000_eps_0.010000_lm_0_stop_optPoint.csv  grish_n_2_rotated_l_2_r_2.300000_eps_0.001000_lm_0_stop_accuracy.csv  grish_n_2_rotated_l_3_r_2.100000_eps_0.001000_lm_0_stop_accuracy.csv  grish_n_2_rotated_l_3_r_2.100000_eps_0.010000_lm_0_stop_optPoint.csv  grish_n_2_shifted_l_1_r_2.900000_eps_0.010000_lm_0_stop_optPoint.csv  grish_n_2_shifted_l_1_r_3.100000_eps_0.001000_lm_0_stop_accuracy.csv  grish_n_2_shifted_l_2_r_2.400000_eps_0.010000_lm_0_stop_optPoint.csv  (+6 more)
operation_characteristics/gklsS3d/: gklsS_n_3_rotated_l_1_r_4.500000_eps_0.010000_lm_0_stop_optPoint.csv
sample/: main.cpp
samples/: dump_points.cpp  solve_class.cpp
scripts/: draw_characteristics.py  find_min_r.py  plot_evolvent.py
src/: dataTypes.hpp  evolvents.cpp  evolvents.hpp  multievolventSolver.cpp  multievolventSolver.hpp  smoothEvolvent.cpp  smoothEvolvent.hpp
(+124 files in other folders)
